FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20200514:
AUTHOR: mat@FreeBSD.org

  Add PATCH_CONTINUE_ON_FAIL to allow patching to go through all the patches
  even if one fail.

  This helps when upgrading ports with a large number of patches, like
  www/chromium where having to fix one patch, re-do the patching, fix the
  fallout, 800 times, is really painful.

20200414:
AUTHOR: bapt@FreeBSD.org

  package scripts can now be done in lua, the following are supported:

  - pkg-pre-install.lua
  - pkg-post-install.lua
  - pkg-pre-deinstall.lua
  - pkg-post-deinstall.lua

  see pkg-lua-script(5) for more details.

20200414:
AUTHOR: mat@FreeBSD.org

  USES=lua gained flavors.

  Ports using USES=lua:module or lua:flavors will be flavored.  A range of
  supported lua versions can be set using XX-YY (or XX-, or -YY, or simply ZZ)
  for ports not supporting all lua versions.

  USES=lua sets LUA_FLAVOR that needs to be used on all dependencies of
  flavored lua ports, in a similar way as PHP or Python flavors.
  
20200115:
AUTHOR: bapt@FreeBSD.org

  ${PREFIX}/share/man is now a valid location for manpages ${PREFIX}/man being
  considered as deprecated.

20191009:
AUTHOR: bapt@FreeBSD.org

  The ipv6 virtual category is gone, it does not make sense anymore in 2019
  where the norm in applications is to have support both ipv4 and ipv6.
  
20191001:
AUTHOR: bapt@FreeBSD.org

  BINARY_WRAPPERS allow to push in front of the PATH wrappers for binaries.
  This is useful when 2 tools do provide the same feature, but the configure
  scripts do test for some variables which are not in one of the tool.

20190919:
AUTHOR: madpilot@FreeBSD.org
