@@ -820,7 +820,7 @@ bitmark-recorder:*:873:
 # free: 877
 # free: 878
 # free: 879
-# free: 880
+pyspf-milter:*:880:
 ultimaker:*:881:
 midpoint:*:882:
 ipfs-go:*:883:
