@@ -15,6 +15,7 @@
 # USE_PYQT	- List of PyQt components to depend on
 #		* foo_build    only build depend
 #		* foo_run      only run depend
+#		* foo_test     only test depend
 #		* foo          both (default)
 # PYQT_SIPDIR	- where sip files will be installed to
 # PYQT_APIDIR	- where api files will be installed to
@@ -280,15 +281,17 @@ do-configure:
 .endif  # !target(do-configure)
 .endif  # defined(PYQT_DIST)
 
-# Set build and run depends -- we need to prefix them internally with "py-"
+# Set build, run and test depends -- we need to prefix them internally with "py-"
 # else we conflict with the ones defined in bsd.qt.mk with the same name
 _USE_PYQT_ALL+=			${_USE_PYQT${_PYQT_VERSION}_ONLY}
 .for comp in ${_USE_PYQT_ALL:O:u}
-_USE_PYQT_ALL_SUFFIXED+=		py-${comp} py-${comp}_build py-${comp}_run
+_USE_PYQT_ALL_SUFFIXED+=		py-${comp} py-${comp}_build py-${comp}_run py-${comp}_test
 py-${comp}_BUILD_DEPENDS?=		${py-${comp}_PATH}:${py-${comp}_PORT}@${PY_FLAVOR}
 py-${comp}_RUN_DEPENDS?=		${py-${comp}_PATH}:${py-${comp}_PORT}@${PY_FLAVOR}
+py-${comp}_TEST_DEPENDS?=		${py-${comp}_PATH}:${py-${comp}_PORT}@${PY_FLAVOR}
 py-${comp}_build_BUILD_DEPENDS?=	${py-${comp}_BUILD_DEPENDS}
 py-${comp}_run_RUN_DEPENDS?=		${py-${comp}_RUN_DEPENDS}
+py-${comp}_test_TEST_DEPENDS?=		${py-${comp}_TEST_DEPENDS}
 .endfor
 
 _USE_PYQT=      ${USE_PYQT:O:u}
@@ -296,6 +299,7 @@ _USE_PYQT=      ${USE_PYQT:O:u}
 .  if ${_USE_PYQT_ALL_SUFFIXED:Mpy-${comp}}
 BUILD_DEPENDS+=		${py-${comp}_BUILD_DEPENDS}
 RUN_DEPENDS+=		${py-${comp}_RUN_DEPENDS}
+TEST_DEPENDS+=		${py-${comp}_TEST_DEPENDS}
 .  else
 IGNORE?=	cannot be installed: unknown USE_PYQT component ${comp} #'
 .  endif
